@startuml workbook.png 
skinparam monochrome true 
skinparam packageStyle rect 
skinparam defaultFontName FG Virgil 
skinparam shadowing false 
 
hide empty methods 
 
class Workbook { 
    -List<Spreadsheet> spreadsheets 
} 
class Spreadsheet 
Class WorkbookDescription { 
    -name 
    -description 
    -workbook 
} 
 
Workbook o-- Spreadsheet: has 
WorkbookDescription *-- Workbook 
 
@enduml